--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 
 </head>
 <body>
+
     <!--Bg-image-->
+    
     <div class="bgimg-1">
+
         <!-- Navbar -->
+
         <nav class="navbar navbar-expand-lg bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><img src="/images/NavLogo.png" alt="" width="200" class="img-fluid"/></a>
@@ -38,6 +42,35 @@
                 </div>
             </div>
         </nav>
+
+        <!--CAROUSEL-->
+
+   <div id="slider1" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#slider1" data-slide-to="0" class="active"></li>
+      <li data-target="#slider1" data-slide-to="1"></li>
+      <li data-target="#slider1" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+          <div class="carousel-item active">
+            <img src="/images/Slide-1.png" class="d-block w-100" alt="">
+          </div>
+          <div class="carousel-item">
+              <img src="/images/Slide-2.png" class="d-block w-100" alt="">
+            </div>
+            <div class="carousel-item">
+              <img src="/images/Slide-3.png" class="d-block w-100" alt="">
+            </div>
     </div>
+    <a class="carousel-control-prev" href="#slider1" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#slider1" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
 </body>
 </html>
