--- a/index.html
+++ b/index.html
@@ -72,5 +72,63 @@
     </a>
   </div>
 </div>
+
+<br><br><br><br>
+    <!--CARD(Trending Products)-->
+    <div class="container-fluid">
+      <div class="Trd-title">🔥Trending Products </div>
+      <br>
+      
+      <div class="card-cs text-center">
+          <div class="row">
+            <div class="col">
+              <div class="card coustom-card" style="width:18rem;">
+                <img src="/images/Card-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p>ARDUINO</p>
+                  <h5 class="card-title card-title-coustom">Arduino Starter Kit</h5>
+                  <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.3000.00</h6>
+                  <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+  
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card coustom-card" style="width:18rem;">
+                <img src="/images/Card-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p>ARDUINO</p>
+                  <h5 class="card-title card-title-coustom">Bread Board</h5>
+                  <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.580.00</h6>
+                  <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card coustom-card" style="width:18rem;">
+                <img src="/images/Card-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p>ARDUINO</p>
+                  <h5 class="card-title card-title-coustom">Ultra Sonic Sensor</h5>
+                  <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.280.00</h6>
+                  <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+                              </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card coustom-card" style="width:18rem;">
+                <img src="/images/Card-4.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <p>ARDUINO</p>
+                  <h5 class="card-title card-title-coustom">Ardunino Uno Board</h5>
+                  <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.3500.00</h6>
+                  <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+                              </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
 </body>
 </html>
