--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       
       <div class="card-cs text-center">
           <div class="row">
-            <div class="col">
+            <div class="col-md-3 col-sm-6">
               <div class="card coustom-card" style="width:18rem;">
                 <img src="/images/Card-1.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -93,7 +93,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-3 col-sm-6">
               <div class="card coustom-card" style="width:18rem;">
                 <img src="/images/Card-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -104,7 +104,7 @@
                 </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-3 col-sm-6">
               <div class="card coustom-card" style="width:18rem;">
                 <img src="/images/Card-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -115,7 +115,7 @@
                               </div>
               </div>
             </div>
-            <div class="col">
+            <div class="col-md-3 col-sm-6">
               <div class="card coustom-card" style="width:18rem;">
                 <img src="/images/Card-4.png" class="card-img-top" alt="...">
                 <div class="card-body">
