--- a/index.html
+++ b/index.html
@@ -130,6 +130,62 @@
         </div>
       </div>
     </div>
+<footer>
+  <div class="Footer_Background">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h3>Office</h3>
+        <p>Akura Institute,</p>
+        <p>Thalalla South,</p>
+        <p>Matara,</p>
+        <p>Sri lanka</p>
 
+        <h4>+94 70 251 9087</h4>
+      </div>
+      <div class="col">
+        <h3>Links<span></span></h3>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Product</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href="">Contact us</a></li>
+            <li><a href="">Events</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <h3>Newsletter<span></span></h3>
+        <form>
+                <input type="email" placeholder="Enter Your email id" required>
+            <div class="img-icon-envelop">
+                <button type="submit"><img src="images/Icons/submit-64.png" alt="submit" width="174px" height="75px"></button>
+            </div>
+        <br>
+        </form>
+        <div class="social-icons">
+            <img src="images/Icons/Socail_01.png" alt="Facebook">
+        </div>
+
+        <div class="social-icons">
+            <img src="images/Icons/Socail_04.png" alt="Youtube">
+        </div>
+        <div class="social-icons">
+            <img src="images/Icons/Socail_05.png" alt="Instagram">
+        </div>
+        <div class="social-icons">
+            <img src="images/Icons/Socail_06.png" alt="Tiktok">
+        </div>
+        <p class="email-id">sliotamigos@gmail.com</p>
+
+      </div>
+      <div class="col">
+        <img src="images/Footer1.png" width=250px ="LOGO"></div>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <p class="copyright">Easy Tutorials © 2023 - All Right Reserved </p>
+</div>
+</footer>
 </body>
 </html>
