--- a/index.html
+++ b/index.html
@@ -156,10 +156,12 @@
       <div class="col">
         <h3>Newsletter<span></span></h3>
         <form>
-                <input type="email" placeholder="Enter Your email id" required>
-            <div class="img-icon-envelop">
-                <button type="submit"><img src="images/Icons/submit-64.png" alt="submit" width="174px" height="75px"></button>
-            </div>
+          <div class="sub">
+            <input type="email" placeholder="Enter Your email id" required>
+        <div class="img-icon-envelop">
+            <button type="submit" class="sub2"><img src="images/Icons/sign_in_003.png" alt="submit" width="50px" height="50px"></button>
+        </div>
+      </div>
         <br>
         </form>
         <div class="social-icons">
