--- a/index.html
+++ b/index.html
@@ -129,7 +129,39 @@
           </div>
         </div>
       </div>
-    </div>
+
+        <!--Latest event-->
+<div class="Lt-title">⚡Latest Event </div>
+<!-- <div class="cus"> -->
+<div id="slider2" class="carousel slide cus" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#slider2" data-slide-to="0" class="active"></li>
+    <li data-target="#slider2" data-slide-to="1"></li>
+    <li data-target="#slider2" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+        <div class="carousel-item active">
+          <img src="/images/Event-1.png" class="d-block w-100" alt="">
+        </div>
+        <div class="carousel-item">
+            <img src="/images/Event-2.png" class="d-block w-100" alt="">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/Event-3.png" class="d-block w-100" alt="">
+          </div>
+          
+  </div>
+  <a class="carousel-control-prev" href="#slider2" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#slider2" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+
+
+
+
 <footer>
   <div class="Footer_Background">
   <div class="container">
@@ -189,5 +221,6 @@
   <p class="copyright">Easy Tutorials © 2023 - All Right Reserved </p>
 </div>
 </footer>
+</div>
 </body>
 </html>
