Added search bar and sort by to the product page

--- a/product.html
+++ b/product.html
@@ -37,6 +37,30 @@
         </div>
     </div>
 </nav>
+<!--search bar-->
+<div class="container">
+    <form class="d-flex">
+        <input class="form-control me 2" type="search" placeholder="search">
+        <button class="btn btn-outline-info" type="send">search</button>
+    </form>
+</div>
+
+<!--sort by-->
+<div class="container-2">
+<tr>
+    <td>
+        sort by
+    </td>
+    
+
+<td><select name="sort-by">
+<option value="0">default</option>
+<option value="1">price lowest-highest</option>
+<option value="2">price highest-lowest</option>
+</select></td>
+</tr>
+</div>
+<br>
 
 </div>
 </body>
