image place cahnged

--- a/mycart.html
+++ b/mycart.html
@@ -63,14 +63,17 @@
                     <table>
                      
                       <tr>
-                        <td><td colspan="2"><input type="checkbox" id="item1" name="item[]" value="Item 1">image1</td>
+                        <td><td colspan="2"></td>
+                       <td> <img src="image1.jpg" alt="Item 1 Image" style="width: 20px; height: 20px; margin-right: 5px;"></td>
                         <td><td><span><p class="unit">Quantity: <input name="" value="0"></p></td>
                           <td>Description</td>
-                          <td>LKR 100</td>
+                           <td>LKR 100</td>
                         <td><button class="remove-item-btn">Remove</button></td>
                       </tr>
+
                       <tr>
-                        <td><td colspan="2"><input type="checkbox" id="item1" name="item[]" value="Item 1">image2</td>
+                        <td><td colspan="2"></td>
+                       <td> <img src="image2.jpg" alt="Item 1 Image" style="width: 20px; height: 20px; margin-right: 5px;"></td>
                         <td><td><span><p class="unit">Quantity: <input name="" value="0"></p></td>
                           <td>Description</td>
                            <td>LKR 100</td>
