--- a/mycart.html
+++ b/mycart.html
@@ -65,7 +65,8 @@
                       <tr>
                         <td><td colspan="2"></td>
                        <td> <img src="image1.jpg" alt="Item 1 Image" style="width: 20px; height: 20px; margin-right: 5px;"></td>
-                        <td><td><span><p class="unit">Quantity: <input name="" value="0"></p></td>
+                       
+                        <td><td><span><p class="unit"><input type="number" value="1"></p></td>
                           <td>Description</td>
                            <td>LKR 100</td>
                         <td><button class="remove-item-btn">Remove</button></td>
@@ -74,7 +75,7 @@
                       <tr>
                         <td><td colspan="2"></td>
                        <td> <img src="image2.jpg" alt="Item 1 Image" style="width: 20px; height: 20px; margin-right: 5px;"></td>
-                        <td><td><span><p class="unit">Quantity: <input name="" value="0"></p></td>
+                        <td><td><span><p class="unit">  <input type="number" value="1"></p></td>
                           <td>Description</td>
                            <td>LKR 100</td>
                         <td><button class="remove-item-btn">Remove</button></td>
