--- a/mycart.html
+++ b/mycart.html
@@ -60,6 +60,8 @@
 
                 <div class="col">
                   <div class="field-2">
+                    <div class="responsive-table">
+                      
                     <table>
                      
                       <tr>
