Imported the Trending Products card html part

--- a/index.html
+++ b/index.html
@@ -162,6 +162,70 @@
   </div>
   <br>
 
+  <div class="container-fluid">
+    <fieldset class="pb-5 pt-3">
+    <div class="Trd-title">🔥Trending Products </div>
+    <br>
+    
+    <div class="card-cs text-center">
+        <div class="row">
+          <div class="col">
+            <div class="card coustom-card" style="width:18rem;">
+              <img src="/images/Card-1.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p>ARDUINO</p>
+                <h5 class="card-title card-title-coustom">Arduino Starter Kit</h5>
+                <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.3000.00</h6>
+                <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card coustom-card" style="width:18rem;">
+              <img src="/images/Card-2.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p>ARDUINO</p>
+                <h5 class="card-title card-title-coustom">Bread Board</h5>
+                <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.580.00</h6>
+                <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card coustom-card" style="width:18rem;">
+              <img src="/images/Card-3.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p>ARDUINO</p>
+                <h5 class="card-title card-title-coustom">Ultra Sonic Sensor</h5>
+                <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.280.00</h6>
+                <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+                            </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card coustom-card" style="width:18rem;">
+              <img src="/images/Card-4.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <p>ARDUINO</p>
+                <h5 class="card-title card-title-coustom">Ardunino Uno Board</h5>
+                <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.3500.00</h6>
+                <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+                            </div>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+      <br>
+       <div class="text-center">
+        <div class="">
+        <button type="button" class="btn d-grid gap-2 col-2 btn-lg btn-link btnc-2">See more<i class="bi bi-arrow-right" style="color: white; font-size: 2rem;"></i></button>
+      </div>
+  </div>
+      </fieldset>
+     
+      </div>
 
 
 </div>
