resized the quantity button

--- a/mycart.html
+++ b/mycart.html
@@ -67,19 +67,19 @@
                     <tr>
                       <td style="padding: 5px;"> <colspan="2"></td>
                       <td  > <img src="image1.jpg" alt="Item 1 Image" style="width: 20px; ; margin-right: 5px;"></td>
-                      <td style="padding: 20px;" ><span><p class="unit">  <input type="number" value="1" value="1"   ></p></td>
-                      <td  style="padding: 20px;">Description</td>
+                      <td  style="padding: 30px;">Description</td>
+                      <td style="padding: 20px;" ><span><p class="unit">  <input type="number" class="form-control form-control-sm" value="1" value="1"   ></p></td>  
                       <td    >LKR <td>100</td></td>
-                      <td  style="padding: 20px;"><button class="remove-item-btn">Remove</button></td>
+                      <td  style="padding: 30px;"><button class="remove-item-btn">Remove</button></td>
                       </tr>
 
                       <tr>
                        <td style="padding: 5px;"> <colspan="2"></td>
                        <td > <img src="image2.jpg" alt="Item 2 Image" style="width: 20px; ; margin-right: 5px;"></td>
-                       <td  style="padding: 20px;"><span><p class="unit">  <input type="number" value="1"  ></p></td>
-                       <td  style="padding: 20px;">Description</td>
+                       <td  style="padding: 30px;">Description</td>
+                       <td  style="padding: 20px;"><span><p class="unit">  <input type="number"class="form-control form-control-sm"  value="1"  ></p></td>
                        <td   >LKR <td>100</td></td>
-                       <td  style="padding: 20px;" ><button class="remove-item-btn">Remove</button></td>
+                       <td  style="padding: 30px;" ><button class="remove-item-btn">Remove</button></td>
                        </tr>
                   </table>
                     
