--- a/mycart.html
+++ b/mycart.html
@@ -72,7 +72,7 @@
                       </label></td>
                       
                       <td  style="padding: 30px;">Description</td>
-                      <td style="padding: 20px;" ><span><p class="unit">  <input type="number" class="form-control form-control-sm" value="1" value="1"   ></p></td>  
+                      <td style="padding: 20px;" ><span><p class="unit">  <input type="number"min="1"  id="quantity"  class="form-control form-control-sm" value="1" value="1"   ></p></td>  
                       <td    >LKR <td>1000</td></td>
                       <td  style="padding: 30px;"><button class="remove-item-btn">Remove</button></td>
                       </tr>
@@ -85,7 +85,7 @@
                       </label></td>
                       
                        <td  style="padding: 30px;">Description</td>
-                       <td  style="padding: 20px;"><span><p class="unit">  <input type="number"class="form-control form-control-sm"  value="1"  ></p></td>
+                       <td  style="padding: 20px;"><span><p class="unit">  <input type="number" min="1" id="quantity" class="form-control form-control-sm"  value="1"  ></p></td>
                        <td   >LKR <td>2000</td></td>
                        <td  style="padding: 30px;" ><button class="remove-item-btn">Remove</button></td>
                        </tr>
