--- a/product.html
+++ b/product.html
@@ -122,7 +122,71 @@
     <button type="button" class="btn d-grid gap-2 col-2 btn-lg btn-link btnc-2">See more>><i class="bi bi-arrow-right" style="color: white; font-size: 2rem;"></i></button>
   </div>
 </div>
+  <!--micro-bit products-->
+  <div class="micro-bit-products">
+    <h4>Micro-bit-products</h4>
+  </div>
+  <br>
+
+  <div class="card-cs text-center">
+    <div class="row">
+      <div class="col">
+        <div class="card coustom-card" style="width:18rem;">
+          <img src="/images/card-5.jfif" class="card-img-top" alt="..." height="280px">
+          <div class="card-body">
+            <p>Micro-bit</p>
+            <h5 class="card-title card-title-coustom">V2 Go Bundle</h5>
+            <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.6200.00</h6>
+            <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card coustom-card" style="width:18rem;">
+          <img src="/images/card-6.jfif" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p>Micro-bit</p>
+            <h5 class="card-title card-title-coustom">Go starter kit</h5>
+            <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.10235.00</h6>
+            <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card coustom-card" style="width:18rem;">
+          <img src="/images/card-7.jfif" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p>Micro-bit</p>
+            <h5 class="card-title card-title-coustom">V1.5 Development board</h5>
+            <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.11000.00</h6>
+            <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+                        </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card coustom-card" style="width:18rem;">
+          <img src="/images/card-8.jfif" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p>Micro-bit</p>
+            <h5 class="card-title card-title-coustom">Speaker</h5>
+            <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.3100.00</h6>
+            <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+                        </div>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+  <br>
   
+   <div class="text-center">
+    <div class="">
+    <button type="button" class="btn d-grid gap-2 col-2 btn-lg btn-link btnc-2">See more>><i class="bi bi-arrow-right" style="color: white; font-size: 2rem;"></i></button>
+  </div>
+</div>
+
+  <br>
   <br>
 </div>
 </body>
