--- a/product.html
+++ b/product.html
@@ -187,6 +187,68 @@
 </div>
 
   <br>
+   <!--Raspberry pi products-->
+   <div class="raspberry-products">
+    <h4>Raspberry Products</h4>
+  </div>
+  <br>
+  <div class="card-cs text-center">
+    <div class="row">
+      <div class="col">
+        <div class="card coustom-card" style="width:18rem;">
+          <img src="/images/card-9.jfif" class="card-img-top" alt="..." height="250px">
+          <div class="card-body">
+            <p>Raspberry Products</p>
+            <h5 class="card-title card-title-coustom">Pi3 model B</h5>
+            <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.18000.00</h6>
+            <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card coustom-card" style="width:18rem;">
+          <img src="/images/card-10.jfif" class="card-img-top" alt="..." height="250px">
+          <div class="card-body">
+            <p>Raspberry Products</p>
+            <h5 class="card-title card-title-coustom">Pi compute module B</h5>
+            <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.10500.00</h6>
+            <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card coustom-card" style="width:18rem;">
+          <img src="/images/card-11.jfif" class="card-img-top" alt="..." height="250px">
+          <div class="card-body">
+            <p>Raspberry Products</p>
+            <h5 class="card-title card-title-coustom">Raspberry mouse</h5>
+            <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.9580.00</h6>
+            <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+                        </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card coustom-card" style="width:18rem;">
+          <img src="/images/card-12.jfif" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p>Raspberry Products</p>
+            <h5 class="card-title card-title-coustom">Dual giga bit ethernet base bord</h5>
+            <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.21000.00</h6>
+            <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+                        </div>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+  <br>
+   <div class="text-center">
+    <div class="">
+    <button type="button" class="btn d-grid gap-2 col-2 btn-lg btn-link btnc-2">See more>><i class="bi bi-arrow-right" style="color: white; font-size: 2rem;"></i></button>
+  </div>
+</div>
+  <br>
   <br>
 </div>
 </body>
