finished produc page and css

--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/product.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 <!--Bg-image-->
@@ -37,6 +37,7 @@
         </div>
     </div>
 </nav>
+
 <!--search bar-->
 <div class="container">
     <form class="d-flex">
@@ -61,6 +62,7 @@
 </tr>
 </div>
 <br>
+
 <!--arduino products-->
 <div class="arduino-products">
     <h4>Arduino Products</h4>
@@ -122,6 +124,8 @@
     <button type="button" class="btn d-grid gap-2 col-2 btn-lg btn-link btnc-2">See more>><i class="bi bi-arrow-right" style="color: white; font-size: 2rem;"></i></button>
   </div>
 </div>
+  
+  <br>
   <!--micro-bit products-->
   <div class="micro-bit-products">
     <h4>Micro-bit-products</h4>
@@ -187,8 +191,8 @@
 </div>
 
   <br>
-   <!--Raspberry pi products-->
-   <div class="raspberry-products">
+  <!--Raspberry pi products-->
+  <div class="raspberry-products">
     <h4>Raspberry Products</h4>
   </div>
   <br>
@@ -249,7 +253,75 @@
   </div>
 </div>
   <br>
+  <!--other products-->
+  <div class="other-products">
+    <h4>Other Products</h4>
+  </div>
   <br>
+  <div class="card-cs text-center">
+    <div class="row">
+      <div class="col">
+        <div class="card coustom-card" style="width:18rem;">
+          <img src="/images/card-13.jfif" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p>Lights</p>
+            <h5 class="card-title card-title-coustom">LED</h5>
+            <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.20.00</h6>
+            <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="card coustom-card" style="width:18rem;">
+          <img src="/images/card-14.jfif" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p>Circuit welding</p>
+            <h5 class="card-title card-title-coustom">Bouth machine</h5>
+            <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.4750.00</h6>
+            <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card coustom-card" style="width:18rem;">
+          <img src="/images/card-15.jfif" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p>Circuit wires</p>
+            <h5 class="card-title card-title-coustom">1m R,G,B</h5>
+            <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.150.00</h6>
+            <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+                        </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card coustom-card" style="width:18rem;">
+          <img src="/images/card-16.jfif" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p>Transistor</p>
+            <h5 class="card-title card-title-coustom">pnp Transistor</h5>
+            <h6 class="card-subtitle mb-2 card-subtitle-coustom">Rs.110.00</h6>
+            <button type="button" class="btn btn-primary btn-lg">ADD TO CART</button>
+                        </div>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+  <br>
+   <div class="text-center">
+    <div class="">
+    <button type="button" class="btn d-grid gap-2 col-2 btn-lg btn-link btnc-2">See more>><i class="bi bi-arrow-right" style="color: white; font-size: 2rem;"></i></button>
+  </div>
+</div>
+  
+ 
+</div>
+</div>
+</div>
+</div>
+</div>
 </div>
 </body>
 </html>
