added the footer to the contactus page

--- a/Contactus.html
+++ b/Contactus.html
@@ -130,7 +130,65 @@ titute,</p>
 
 </section>
 
+<footer>
+  <div class="Footer_Background">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h3>Office</h3>
+        <p>Akura Institute,</p>
+        <p>Thalalla South,</p>
+        <p>Matara,</p>
+        <p>Sri lanka</p>
 
+        <h4>+94 70 251 9087</h4>
+      </div>
+      <div class="col">
+        <h3>Links<span></span></h3>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Product</a></li>
+            <li><a href="">About us</a></li>
+            <li><a href="">Contact us</a></li>
+            <li><a href="">Events</a></li>
+        </ul>
+      </div>
+      <div class="col">
+        <h3>Newsletter<span></span></h3>
+        <form>
+          <div class="sub">
+            <input type="email" placeholder="Enter Your email id" required>
+        <div class="img-icon-envelop">
+            <button type="submit" class="sub2"><img src="images/Icons/sign_in_003.png" alt="submit" width="50px" height="50px"></button>
+        </div>
+      </div>
+        <br>
+        </form>
+        <div class="social-icons">
+            <img src="images/Icons/Socail_01.png" alt="Facebook">
+        </div>
+
+        <div class="social-icons">
+            <img src="images/Icons/Socail_04.png" alt="Youtube">
+        </div>
+        <div class="social-icons">
+            <img src="images/Icons/Socail_05.png" alt="Instagram">
+        </div>
+        <div class="social-icons">
+            <img src="images/Icons/Socail_06.png" alt="Tiktok">
+        </div>
+        <p class="email-id">sliotamigos@gmail.com</p>
+
+      </div>
+      <div class="col">
+        <img src="images/Footer1.png" width=250px ="LOGO"></div>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <p class="copyright">Easy Tutorials © 2023 - All Right Reserved </p>
+</div>
+</footer>
 </div>
 </body>
 </html>
