added profile & mycart buttons to nav bar

--- a/index.html
+++ b/index.html
@@ -37,9 +37,15 @@
                         
                     </ul>
                     <div class="btn ml-auto btn-coustom">
-                        <img src="./images/Sign-icon.png" alt="" width="30px">
+                        <img src="./images/Sign-icon.png" alt="signin" width="30px">
                         Sign in
                     </div>
+                    <div class="btn ml-2 btn-2" >
+                      <img src="./images/Sign-icon.png" alt="profile" width="30px">                     
+                  </div>
+                    <div class="btn ml-2 btn-3">
+                      <img src="./images/mycart-navicon.png" alt="mycart" width="30px">
+                  </div>
                 </div>
             </div>
         </nav>
