--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-  <main>
+  
 
     <!--Bg-image-->
     
@@ -19,9 +19,9 @@
 
         <!-- Navbar -->
 
-        <nav class="navbar navbar-expand-lg bg-dark">
+        <nav class="navbar navbar-expand-lg bg-dark fixed-top">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img src="./images/NavLogo.png" alt="" width="200" class="img-fluid"/></a>
+                <a class="navbar-brand" href="#"><img src="./images/NavLogo.png" alt="" width="100" class="img-fluid"/></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarID"
                     aria-controls="navbarID" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
                     <div class="btn ml-2 btn-2" >
                       <img src="./images/Sign-icon.png" alt="profile" width="30px">                     
                   </div>
-                    <div class="btn ml-2 btn-3">
+                    <div class="btn ml-2 btn-2">
                       <img src="./images/mycart-navicon.png" alt="mycart" width="30px">
                   </div>
                 </div>
@@ -51,7 +51,7 @@
         </nav>
 
         <!--CAROUSEL-->
-
+        <div class="container-fluid caro">
    <div id="slider1" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#slider1" data-slide-to="0" class="active"></li>
@@ -78,19 +78,22 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-
+</div>
 
 <br><br><br><br>
     <!--CARD(Trending Products)-->
     <div class="container-fluid">
-      <div class="Trd-title">🔥Trending Products </div>
+      <fieldset class="pb-5 pt-3">
+      <center>
+      <div style="font-size: 65px; color: white;">🔥Trending Products </div>
+    </center>
       <br>
       
-      <div class="card-cs text-center">
+      <div class="card-cs text-center hero-section">
           <div class="row">
             <div class="col">
-              <div class="card coustom-card" style="width:18rem;">
-                <img src="./images/Card-1.png" class="card-img-top" alt="...">
+              <div class="card coustom-card" style="width:16rem;">
+                <img src="./images/Card-1.png"alt="...">
                 <div class="card-body">
                   <p>ARDUINO</p>
                   <h5 class="card-title card-title-coustom">Arduino Starter Kit</h5>
@@ -101,8 +104,8 @@
               </div>
             </div>
             <div class="col">
-              <div class="card coustom-card" style="width:18rem;">
-                <img src="./images/Card-2.png" class="card-img-top" alt="...">
+              <div class="card coustom-card" style="width:16rem;">
+                <img src="./images/Card-2.png" alt="...">
                 <div class="card-body">
                   <p>ARDUINO</p>
                   <h5 class="card-title card-title-coustom">Bread Board</h5>
@@ -112,8 +115,8 @@
               </div>
             </div>
             <div class="col">
-              <div class="card coustom-card" style="width:18rem;">
-                <img src="./images/Card-3.png" class="card-img-top" alt="...">
+              <div class="card coustom-card" style="width:16rem;">
+                <img src="./images/Card-3.png" alt="...">
                 <div class="card-body">
                   <p>ARDUINO</p>
                   <h5 class="card-title card-title-coustom">Ultra Sonic Sensor</h5>
@@ -123,8 +126,8 @@
               </div>
             </div>
             <div class="col">
-              <div class="card coustom-card" style="width:18rem;">
-                <img src="./images/Card-4.png" class="card-img-top" alt="...">
+              <div class="card coustom-card" style="width:16rem;">
+                <img src="./images/Card-4.png" class="" alt="...">
                 <div class="card-body">
                   <p>ARDUINO</p>
                   <h5 class="card-title card-title-coustom">Ardunino Uno Board</h5>
@@ -135,17 +138,21 @@
             </div>
           </div>
         </div>
+      </fieldset>
       </div>
 
         <!--Latest event-->
-<div class="Lt-title">⚡Latest Event </div>
+        <div class="container">
+          <center>
+          <div style="font-size: 65px; color: white;">⚡Latest Event </div>
+        </center>
 <br>
-<div id="slider2" class="carousel slide cus" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#slider2" data-slide-to="0" class="active"></li>
-    <li data-target="#slider2" data-slide-to="1"></li>
-    <li data-target="#slider2" data-slide-to="2"></li>
-  </ol>
+  <div id="slider2" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+      <li data-target="#slider2" data-slide-to="0" class="active"></li>
+      <li data-target="#slider2" data-slide-to="1"></li>
+      <li data-target="#slider2" data-slide-to="2"></li>
+    </ol>
   <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
           <img src="./images/Event-1.png" class="d-block w-100" alt="">
@@ -165,10 +172,12 @@
   <a class="carousel-control-next" href="#slider2" role="button" data-slide="next">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
+    </a>
   </div>
+</div>
   <br>
 
-  <div class="container-fluid">
+   <!-- <div class="container-fluid">
     <fieldset class="pb-5 pt-3">
     <div class="Trd-title">🔥Trending Products </div>
     <br>
@@ -232,10 +241,10 @@
       </fieldset>
      
       </div>
-
+ -->
 
 </div>
-</main>
+
 <footer>
   <div class="Footer_Background">
   <div class="container">
